Fixes footer display on mobile

--- a/src/main/sass/components/_wrappers.scss
+++ b/src/main/sass/components/_wrappers.scss
@@ -40,7 +40,6 @@
 .mxt-wrapper--footer {
 	background-color: $secondary-color;
 	padding: 0.5em;
-	height: 4em;
 	margin-top: 2em;
 }
 
